+ max-height added to prevent overlap (ie)

--- a/style.scss
+++ b/style.scss
@@ -119,7 +119,7 @@ h3 { font-size:2rem; }
     }
 }
 
-img.webbhuset { max-width:14rem; vertical-align:top; height:auto; margin-top:0.8rem; }
+img.webbhuset { max-width:14rem; vertical-align:top; height:auto; margin-top:0.8rem; max-height:21px; }
 
 .main > div { padding-left:0; padding-right:0; }
 .toolbar-top { margin-bottom:4rem; }
